# upir-generator

./: LICENSE  Makefile  README.md  dummy.cpp  main.cpp  test.c
flow_graph/: README.md  flow_graph.cpp  flow_graph.h
mlir/: CMakeLists.txt  README.md  build_mlir.sh  rex2mlir.cpp
mlir/analysis/: data_analyzing.cpp
mlir/include/: CMakeLists.txt  data_analyzing.h
mlir/include/pirg/: CMakeLists.txt  Dialect.h  MLIRGen.h  Ops.td
mlir/include/toy/: Ops.td
mlir/include/upir/: CMakeLists.txt  Dialect.h  MLIRGen.h  Ops.td
mlir/lib/: CMakeLists.txt  Dialect.cpp
mlir/mlir/: Dialect.cpp  MLIRGen.cpp
mlir/utils/: MLIRGen.cpp  README.md  data_analyzing.cpp
tests/: axpy.c  axpy.cu  axpy.f  foo.c  for.c  target.c  task.c
visualization/: README.md  visualization.cpp  visualization.h
